--- a/.github/workflows/dockerhub.yaml
+++ b/.github/workflows/dockerhub.yaml
@@ -22,7 +22,7 @@ jobs:
           pwd
           cd server
           pwd
-          docker-compose build -f ./server/docker-compose.yml --pull
+          docker-compose build -f /docker-compose.yml --pull
           docker-compose push
 
 #        name: Push to DockerHub
