--- a/.github/workflows/dockerhub.yaml
+++ b/.github/workflows/dockerhub.yaml
@@ -22,7 +22,7 @@ jobs:
           pwd
           cd server
           pwd
-          docker-compose -f /docker-compose.yml build --pull
+          docker-compose -f ./docker-compose.yml build --pull
           docker-compose push
 
 #        name: Push to DockerHub
