--- a/server/btls384/Dockerfile
+++ b/server/btls384/Dockerfile
@@ -35,3 +35,8 @@ ENV PREFIX $HOME/bee2evp/build/local
 ENV LD_LIBRARY_PATH "${PREFIX}/lib:${LD_LIBRARY_PATH:-}"
 ENV PATH ${PREFIX}/bin:${PATH}
 EXPOSE 443
+EXPOSE 8443
+EXPOSE 8444
+EXPOSE 8445
+EXPOSE 8446
+
