--- a/server/btls512/nginx.conf
+++ b/server/btls512/nginx.conf
@@ -60,8 +60,87 @@ http {
         ssl_certificate_key  /etc/nginx/ssl/priv512.key;
         ssl_session_cache    shared:SSL:1m;
         ssl_session_timeout  5m;
-        ssl_ciphers  DHE-BIGN-WITH-BELT-CTR-MAC-HBELT:DHE-BIGN-WITH-BELT-DWP-HBELT:DHT-BIGN-WITH-BELT-CTR-MAC-HBELT:DHT-BIGN-WITH-BELT-DWP-HBELT:DHE-PSK-BIGN-WITH-BELT-DWP-HBELT:DHE-PSK-BIGN-WITH-BELT-CTR-MAC-HBELT:DHT-PSK-BIGN-WITH-BELT-DWP-HBELT:DHT-PSK-BIGN-WITH-BELT-CTR-MAC-HBELT;
-        ssl_prefer_server_ciphers  on;
+        ssl_ciphers DHE-BIGN-WITH-BELT-CTR-MAC-HBELT:DHE-BIGN-WITH-BELT-DWP-HBELT:DHT-BIGN-WITH-BELT-CTR-MAC-HBELT:DHT-BIGN-WITH-BELT-DWP-HBELT:DHE-PSK-BIGN-WITH-BELT-DWP-HBELT:DHE-PSK-BIGN-WITH-BELT-CTR-MAC-HBELT:DHT-PSK-BIGN-WITH-BELT-DWP-HBELT:DHT-PSK-BIGN-WITH-BELT-CTR-MAC-HBELT;
+        ssl_protocols TLSv1.2;
+        location /check_server {
+            proxy_pass http://flask-app:5000;
+            proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
+        }
+        location / {
+            root html;
+            index index.html;
+        }
+    }
+
+    server {
+        listen 8443 ssl;
+        server_name  localhost;
+        add_header Strict-Transport-Security 'max-age=31536000' always;
+        ssl_certificate      /etc/nginx/ssl/cert512.pem;
+        ssl_certificate_key  /etc/nginx/ssl/priv512.key;
+        ssl_session_cache    shared:SSL:1m;
+        ssl_session_timeout  5m;
+        ssl_ciphers  DHE-BIGN-WITH-BELT-CTR-MAC-HBELT;
+        ssl_protocols TLSv1.2;
+        location /check_server {
+            proxy_pass http://flask-app:5000;
+            proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
+        }
+        location / {
+            root html;
+            index index.html;
+        }
+    }
+
+    server {
+        listen 8444 ssl;
+        server_name  localhost;
+        add_header Strict-Transport-Security 'max-age=31536000' always;
+        ssl_certificate      /etc/nginx/ssl/cert512.pem;
+        ssl_certificate_key  /etc/nginx/ssl/priv512.key;
+        ssl_session_cache    shared:SSL:1m;
+        ssl_session_timeout  5m;
+        ssl_ciphers  DHE-BIGN-WITH-BELT-DWP-HBELT;
+        ssl_protocols TLSv1.2;
+        location /check_server {
+            proxy_pass http://flask-app:5000;
+            proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
+        }
+        location / {
+            root html;
+            index index.html;
+        }
+    }
+
+    server {
+        listen 8445 ssl;
+        server_name  localhost;
+        add_header Strict-Transport-Security 'max-age=31536000' always;
+        ssl_certificate      /etc/nginx/ssl/cert512.pem;
+        ssl_certificate_key  /etc/nginx/ssl/priv512.key;
+        ssl_session_cache    shared:SSL:1m;
+        ssl_session_timeout  5m;
+        ssl_ciphers  DHT-BIGN-WITH-BELT-CTR-MAC-HBELT;
+        ssl_protocols TLSv1.2;
+        location /check_server {
+            proxy_pass http://flask-app:5000;
+            proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
+        }
+        location / {
+            root html;
+            index index.html;
+        }
+    }
+
+    server {
+        listen 8446 ssl;
+        server_name  localhost;
+        add_header Strict-Transport-Security 'max-age=31536000' always;
+        ssl_certificate      /etc/nginx/ssl/cert512.pem;
+        ssl_certificate_key  /etc/nginx/ssl/priv512.key;
+        ssl_session_cache    shared:SSL:1m;
+        ssl_session_timeout  5m;
+        ssl_ciphers  DHT-BIGN-WITH-BELT-DWP-HBELT;
         ssl_protocols TLSv1.2;
         location /check_server {
             proxy_pass http://flask-app:5000;
