--- a/server/btls256/nginx.conf
+++ b/server/btls256/nginx.conf
@@ -60,6 +60,7 @@ http {
         ssl_certificate_key  /etc/nginx/ssl/priv256.key;
         ssl_session_cache    shared:SSL:1m;
         ssl_session_timeout  5m;
+        ssl_prefer_server_ciphers on;
         ssl_ciphers  DHE-BIGN-WITH-BELT-CTR-MAC-HBELT:DHE-BIGN-WITH-BELT-DWP-HBELT:DHT-BIGN-WITH-BELT-CTR-MAC-HBELT:DHT-BIGN-WITH-BELT-DWP-HBELT:DHE-PSK-BIGN-WITH-BELT-DWP-HBELT:DHE-PSK-BIGN-WITH-BELT-CTR-MAC-HBELT:DHT-PSK-BIGN-WITH-BELT-DWP-HBELT:DHT-PSK-BIGN-WITH-BELT-CTR-MAC-HBELT;
         ssl_protocols TLSv1.2;
         location /check_server {
@@ -80,6 +81,7 @@ http {
         ssl_certificate_key  /etc/nginx/ssl/priv256.key;
         ssl_session_cache    shared:SSL:1m;
         ssl_session_timeout  5m;
+        ssl_prefer_server_ciphers on;
         ssl_ciphers  DHE-BIGN-WITH-BELT-CTR-MAC-HBELT;
         ssl_protocols TLSv1.2;
         location /check_server {
@@ -87,8 +89,8 @@ http {
             proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
         }
         location / {
-            root html;
-            index index.html;
+            proxy_pass http://flask-app:5000;
+            proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
         }
     }
 
@@ -100,6 +102,7 @@ http {
         ssl_certificate_key  /etc/nginx/ssl/priv256.key;
         ssl_session_cache    shared:SSL:1m;
         ssl_session_timeout  5m;
+        ssl_prefer_server_ciphers on;
         ssl_ciphers  DHE-BIGN-WITH-BELT-DWP-HBELT;
         ssl_protocols TLSv1.2;
         location /check_server {
@@ -107,8 +110,8 @@ http {
             proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
         }
         location / {
-            root html;
-            index index.html;
+            proxy_pass http://flask-app:5000;
+            proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
         }
     }
 
@@ -120,6 +123,7 @@ http {
         ssl_certificate_key  /etc/nginx/ssl/priv256.key;
         ssl_session_cache    shared:SSL:1m;
         ssl_session_timeout  5m;
+        ssl_prefer_server_ciphers on;
         ssl_ciphers  DHT-BIGN-WITH-BELT-CTR-MAC-HBELT;
         ssl_protocols TLSv1.2;
         location /check_server {
@@ -127,8 +131,8 @@ http {
             proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
         }
         location / {
-            root html;
-            index index.html;
+            proxy_pass http://flask-app:5000;
+            proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
         }
     }
 
@@ -147,8 +151,8 @@ http {
             proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
         }
         location / {
-            root html;
-            index index.html;
+            proxy_pass http://flask-app:5000;
+            proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
         }
     }
 
