--- a/server/btls384/nginx.conf
+++ b/server/btls384/nginx.conf
@@ -87,8 +87,8 @@ http {
             proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
         }
         location / {
-            root html;
-            index index.html;
+            proxy_pass http://flask-app:5000;
+            proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
         }
     }
 
@@ -107,8 +107,8 @@ http {
             proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
         }
         location / {
-            root html;
-            index index.html;
+            proxy_pass http://flask-app:5000;
+            proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
         }
     }
 
@@ -127,8 +127,8 @@ http {
             proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
         }
         location / {
-            root html;
-            index index.html;
+            proxy_pass http://flask-app:5000;
+            proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
         }
     }
 
@@ -147,8 +147,8 @@ http {
             proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
         }
         location / {
-            root html;
-            index index.html;
+            proxy_pass http://flask-app:5000;
+            proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
         }
     }
 
