--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -39,15 +39,16 @@ services:
     depends_on:
       - flask
     # Прокладывам путь для файлов. Все файлы, которые хранятся у вас в 
-    # директории ./backend, появятся в директории контейнера /backend
+    # директории ./backend, появятся в директории контейнера /backend\
     volumes:
-      - ./:/btls256
+      - ./btls256:/btls256
     ports:
       - "80:80"
       - "443:443"
       - "8443:8443"
       - "8444:8444"
       - "8445:8445"
+      - "8446:8446"
     command: tail -F anything
     networks:
       back:
@@ -63,13 +64,14 @@ services:
     # Прокладывам путь для файлов. Все файлы, которые хранятся у вас в 
     # директории ./backend, появятся в директории контейнера /backend
     volumes:
-      - ./:/btls384
+      - ./btls384:/btls384
     ports:
       - "80:80"
       - "443:443"
       - "8443:8443"
       - "8444:8444"
       - "8445:8445"
+      - "8446:8446"
     command: tail -F anything
     networks:
       back:
@@ -85,13 +87,14 @@ services:
     # Прокладывам путь для файлов. Все файлы, которые хранятся у вас в 
     # директории ./backend, появятся в директории контейнера /backend
     volumes:
-      - ./:/btls512
+      - ./btls512:/btls512
     ports:
       - "80:80"
       - "443:443"
       - "8443:8443"
       - "8444:8444"
       - "8445:8445"
+      - "8446:8446"
     command: tail -F anything
     networks:
       back:
