--- a/server/btls256/nginx.conf
+++ b/server/btls256/nginx.conf
@@ -64,7 +64,7 @@ http {
         ssl_ciphers  DHE-BIGN-WITH-BELT-CTR-MAC-HBELT:DHE-BIGN-WITH-BELT-DWP-HBELT:DHT-BIGN-WITH-BELT-CTR-MAC-HBELT:DHT-BIGN-WITH-BELT-DWP-HBELT:DHE-PSK-BIGN-WITH-BELT-DWP-HBELT:DHE-PSK-BIGN-WITH-BELT-CTR-MAC-HBELT:DHT-PSK-BIGN-WITH-BELT-DWP-HBELT:DHT-PSK-BIGN-WITH-BELT-CTR-MAC-HBELT;
         ssl_protocols TLSv1.2;
         location /check_server {
-            proxy_pass http://flask-app:5000;
+            proxy_pass http://flask:5000;
             proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
         }
         location / {
@@ -85,11 +85,19 @@ http {
         ssl_ciphers  DHE-BIGN-WITH-BELT-CTR-MAC-HBELT;
         ssl_protocols TLSv1.2;
         location /check_server {
-            proxy_pass http://flask-app:5000;
+            proxy_pass http://flask:5000;
             proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
         }
+        location /issue_cert {
+            proxy_pass http://flask:5000;
+            proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
+        }
+        location /tsa {
+            proxy_pass http://flask:5000;
+            proxy_set_body "bash256#tsa.sh#False";
+        }
         location / {
-            proxy_pass http://flask-app:5000;
+            proxy_pass http://flask:5000;
             proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
         }
     }
@@ -106,11 +114,11 @@ http {
         ssl_ciphers  DHE-BIGN-WITH-BELT-DWP-HBELT;
         ssl_protocols TLSv1.2;
         location /check_server {
-            proxy_pass http://flask-app:5000;
+            proxy_pass http://flask:5000;
             proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
         }
         location / {
-            proxy_pass http://flask-app:5000;
+            proxy_pass http://flask:5000;
             proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
         }
     }
@@ -127,11 +135,11 @@ http {
         ssl_ciphers  DHT-BIGN-WITH-BELT-CTR-MAC-HBELT;
         ssl_protocols TLSv1.2;
         location /check_server {
-            proxy_pass http://flask-app:5000;
+            proxy_pass http://flask:5000;
             proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
         }
         location / {
-            proxy_pass http://flask-app:5000;
+            proxy_pass http://flask:5000;
             proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
         }
     }
@@ -147,11 +155,11 @@ http {
         ssl_ciphers  DHT-BIGN-WITH-BELT-DWP-HBELT;
         ssl_protocols TLSv1.2;
         location /check_server {
-            proxy_pass http://flask-app:5000;
+            proxy_pass http://flask:5000;
             proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
         }
         location / {
-            proxy_pass http://flask-app:5000;
+            proxy_pass http://flask:5000;
             proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
         }
     }
