--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,36 +1,43 @@
 version: '3'
 services:
+
   flask:
-    # Путь до Dockerfile
     build: ./backend
     image: btls/flask
-   # Имя для создаваемого контейнера
     container_name: flask
-#    depends_on:
-#      - nginx
-    # Создание переменных окружения в контейнере
+    environment:
+      APP_ENV: "prod"
+      APP_DEBUG: "False"
+      APP_PORT: 5000
+      MONGODB_DATABASE: flaskdb
+      MONGODB_USERNAME: flaskuser
+      MONGODB_PASSWORD: 12345
+      MONGODB_HOSTNAME: mongodb
     volumes:
       - ./backend:/backend
-    environment:
-      - FLASK_APP=/backend/app.py
-      # для отладки (при запуске в релиз убрать!)
-      - FLASK_ENV=development
-      ## Позволяет отслеживать процесс работы приложения в командной строке
-      - PYTHONUNBUFFERED=True                   
-      ##
-    # Перезапускаем сервис в случае падения 
-    restart: on-failure
-    # Прокладывам путь для файлов. Все файлы, которые хранятся у вас в 
-    # директории ./backend, появятся в директории контейнера /backend
-    # Открываем порт в контейнер
-    # Порт, который будет смотреть наружу : порт который используется внутри контейнера
-    command: tail -F anything # flask run --host=0.0.0.0 --port=5000
-    ports:
-      - "8080:5000"
+    depends_on:
+      - mongodb
     networks:
-      back:
-        aliases:
-          - flask-app
+     - frontend
+     - backend
+    command: tail -F anything #gunicorn -w 4 --bind 0.0.0.0:5000 wsgi
+
+  mongodb:
+    image: mongo:4.0.8
+    container_name: mongodb
+    restart: unless-stopped
+    command: mongod --auth
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: mongodbuser
+      MONGO_INITDB_ROOT_PASSWORD: toor
+      MONGO_INITDB_DATABASE: flaskdb
+      MONGODB_DATA_DIR: /data/db
+      MONDODB_LOG_DIR: /dev/null
+    volumes:
+      - mongodbdata:/data/db
+    networks:
+      - backend
+
   btls256:
     build:
       context: ./btls256
@@ -51,56 +58,54 @@ services:
       - "8446:8446"
     command: tail -F anything
     networks:
-      back:
-        aliases:
-          - btls256
-  btls384:
-    build:
-      context: ./btls384
-    image: btls/btls384
-    container_name: btls384
-    depends_on:
-      - flask
-    # Прокладывам путь для файлов. Все файлы, которые хранятся у вас в 
-    # директории ./backend, появятся в директории контейнера /backend
-    volumes:
-      - ./btls384:/btls384
-    ports:
-      - "80:80"
-      - "443:443"
-      - "8443:8443"
-      - "8444:8444"
-      - "8445:8445"
-      - "8446:8446"
-    command: tail -F anything
-    networks:
-      back:
-        aliases:
-          - btls384
-  btls512:
-    build:
-      context: ./btls512
-    image: btls/btls512
-    container_name: btls512
-    depends_on:
-      - flask
-    # Прокладывам путь для файлов. Все файлы, которые хранятся у вас в 
-    # директории ./backend, появятся в директории контейнера /backend
-    volumes:
-      - ./btls512:/btls512
-    ports:
-      - "80:80"
-      - "443:443"
-      - "8443:8443"
-      - "8444:8444"
-      - "8445:8445"
-      - "8446:8446"
-    command: tail -F anything
-    networks:
-      back:
-        aliases:
-          - btls512
+      - frontend
+  
+# btls384:
+#   build:
+#     context: ./btls384
+#   image: btls/btls384
+#   container_name: btls384
+#   depends_on:
+#     - flask
+#   # Прокладывам путь для файлов. Все файлы, которые хранятся у вас в 
+#   # директории ./backend, появятся в директории контейнера /backend
+#   volumes:
+#     - ./btls384:/btls384
+#   ports:
+#     - "80:80"
+#     - "443:443"
+#     - "8443:8443"
+#     - "8444:8444"
+#     - "8445:8445"
+#     - "8446:8446"
+#   command: tail -F anything
+#
+# btls512:
+#   build:
+#     context: ./btls512
+#   image: btls/btls512
+#   container_name: btls512
+#   depends_on:
+#     - flask
+#   # Прокладывам путь для файлов. Все файлы, которые хранятся у вас в 
+#   # директории ./backend, появятся в директории контейнера /backend
+#   volumes:
+#     - ./btls512:/btls512
+#   ports:
+#     - "80:80"
+#     - "443:443"
+#     - "8443:8443"
+#     - "8444:8444"
+#     - "8445:8445"
+#     - "8446:8446"
+#   command: tail -F anything
 
 networks:
-  back:
+  frontend:
     driver: bridge
+  backend:
+    driver: bridge
+
+volumes:
+  mongodbdata:
+    driver: local
