--- a/server/btls256/nginx.conf
+++ b/server/btls256/nginx.conf
@@ -1,12 +1,5 @@
-#user  nobody;
 worker_processes  1;
-
 error_log  logs/error.log;
-#error_log  logs/error.log  notice;
-#error_log  logs/error.log  info;
-
-#pid        logs/nginx.pid;
-
 
 events {
     worker_connections  1024;
@@ -16,36 +9,9 @@ events {
 http {
     include       mime.types;
     default_type  application/octet-stream;
-
-    #log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-    #                  '$status $body_bytes_sent "$http_referer" '
-    #                  '"$http_user_agent" "$http_x_forwarded_for"';
-
-    #access_log  logs/access.log  main;
-
     sendfile        on;
-    #tcp_nopush     on;
-
-    #keepalive_timeout  0;
     keepalive_timeout  65;
-    #gzip  on;
 
-    # another virtual host using mix of IP-, name-, and port-based configuration
-    #
-    #server {
-    #    listen       8000;
-    #    listen       somename:8080;
-    #    server_name  somename  alias  another.alias;
-
-    #    location / {
-    #        root   html;
-    #        index  index.html index.htm;
-    #    }
-    #}
-
-
-    # HTTPS server
-    #
     log_format custom_log_format '$remote_addr - $remote_user [$time_local]'
                                  '"$request" $status $body_bytes_sent '
                                  '"$http_referer" "$http_user_agent"'
@@ -63,8 +29,8 @@ http {
         ssl_prefer_server_ciphers on;
         ssl_ciphers  DHE-BIGN-WITH-BELT-CTR-MAC-HBELT:DHE-BIGN-WITH-BELT-DWP-HBELT:DHT-BIGN-WITH-BELT-CTR-MAC-HBELT:DHT-BIGN-WITH-BELT-DWP-HBELT:DHE-PSK-BIGN-WITH-BELT-DWP-HBELT:DHE-PSK-BIGN-WITH-BELT-CTR-MAC-HBELT:DHT-PSK-BIGN-WITH-BELT-DWP-HBELT:DHT-PSK-BIGN-WITH-BELT-CTR-MAC-HBELT;
         ssl_protocols TLSv1.2;
-        location /check_server {
-            proxy_pass http://flask:5000;
+        location /tls {
+            proxy_pass http://flask:5000/tls;
             proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
         }
         location / {
@@ -84,21 +50,18 @@ http {
         ssl_prefer_server_ciphers on;
         ssl_ciphers  DHE-BIGN-WITH-BELT-CTR-MAC-HBELT;
         ssl_protocols TLSv1.2;
-        location /check_server {
-            proxy_pass http://flask:5000;
+        location /tls {
+            proxy_pass http://flask:5000/tls;
             proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
         }
-        location /issue_cert {
-            proxy_pass http://flask:5000;
-            proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
+
+        location /bpki {
+            proxy_pass http://flask:5000/bpki;
         }
-        location /tsa {
-            proxy_pass http://flask:5000;
-            proxy_set_body "bash256#tsa.sh#False";
-        }
+
         location / {
-            proxy_pass http://flask:5000;
-            proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
+            root html;
+            index index.html;
         }
     }
 
@@ -162,17 +125,5 @@ http {
             proxy_pass http://flask:5000;
             proxy_set_body "$ssl_cipher#$ssl_ciphers#$ssl_curves#$ssl_protocol";
         }
-    }
-
-    server {
-        # catch all unsecure requests (both IPv4 and IPv6)
-        listen 80 default_server;
-        listen [::]:80 default_server ipv6only=on;
-
-        # this means example.com, *.example.com
-        server_name .example.com;
-
-        # permanently redirect client to https version of the site
-        return 301 https://example.com;
     }
 }
