--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,64 +1,39 @@
 version: '3'
 services:
-
-  flask:
-    build: ./backend
-    image: btls/flask
-    container_name: flask
-    environment:
-      APP_ENV: "prod"
-      APP_DEBUG: "False"
-      APP_PORT: 5000
-      MONGODB_DATABASE: flaskdb
-      MONGODB_USERNAME: flaskuser
-      MONGODB_PASSWORD: 12345
-      MONGODB_HOSTNAME: mongodb
-    volumes:
-      - ./backend:/backend
-    depends_on:
-      - mongodb
-    networks:
-     - frontend
-     - backend
-    command: tail -F anything #gunicorn -w 4 --bind 0.0.0.0:5000 wsgi
-
-  mongodb:
-    image: mongo:4.0.8
-    container_name: mongodb
-    restart: unless-stopped
-    command: mongod --auth
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: mongodbuser
-      MONGO_INITDB_ROOT_PASSWORD: toor
-      MONGO_INITDB_DATABASE: flaskdb
-      MONGODB_DATA_DIR: /data/db
-      MONDODB_LOG_DIR: /dev/null
-    volumes:
-      - mongodbdata:/data/db
-    networks:
-      - backend
-
-  btls256:
-    build:
-      context: ./btls256
-    image: btls/btls256
-    container_name: btls256
-    depends_on:
-      - flask
-    # Прокладывам путь для файлов. Все файлы, которые хранятся у вас в 
-    # директории ./backend, появятся в директории контейнера /backend\
-    volumes:
-      - ./btls256:/btls256
-    ports:
-      - "80:80"
-      - "443:443"
-      - "8443:8443"
-      - "8444:8444"
-      - "8445:8445"
-      - "8446:8446"
-    command: tail -F anything
-    networks:
-      - frontend
+    flask_app:
+      build: ./flask_app
+      image: btls/flask_app
+      container_name: flask_app
+      volumes:
+        - type: bind
+          source: ./flask_app/
+          target: /flask_app
+      command: tail -F anything
+      networks:
+        back:
+          aliases:
+            - flask
+    btls256:
+      build:
+        context: ./btls256
+      image: btls/btls256
+      container_name: btls256
+      depends_on:
+        - flask_app
+      volumes:
+        - ./btls256:/btls256
+      ports:
+        - "80:80"
+        - "443:443"
+        - "8443:8443"
+        - "8444:8444"
+        - "8445:8445"
+        - "8446:8446"
+      command: tail -F anything
+      networks:
+        back:
+          aliases:
+            - btls256
   
 # btls384:
 #   build:
@@ -101,11 +76,5 @@ services:
 #   command: tail -F anything
 
 networks:
-  frontend:
+  back:
     driver: bridge
-  backend:
-    driver: bridge
-
-volumes:
-  mongodbdata:
-    driver: local
