--- a/server/btls512/Dockerfile
+++ b/server/btls512/Dockerfile
@@ -7,7 +7,7 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get install cmake -y -q
 RUN apt-get install -y -q \
 	wget \
 	git \
-	python \
+	python3 \
 	vim \
 	nano \
 	iptables \
