--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,15 @@
 support
 spec/*.pdf
 clear.cmd
+
+# VS Code files
+.vscode/
+
+# pycache files
+__pycache__/
+
+# python env files
+env/
+
+# Idea files
+.idea/
