Preparing for btls13

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -16,8 +16,8 @@ jobs:
         with:
           ref: ${{ github.ref }}
       - name: Build LaTeX
-        uses: xu-cheng/latex-action@v2
+        uses: xu-cheng/latex-action@v4
         with:
-          root_file: btls.tex
-          working_directory: spec/
-          args: -jobname=btls -pdf -file-line-error -halt-on-error -interaction=nonstopmode
+          root_file: "spec*/btls.tex"
+          working_directory: ./
+          work_in_root_file_dir: true
