--- a/server/btls512/Dockerfile
+++ b/server/btls512/Dockerfile
@@ -1,8 +1,7 @@
-FROM ubuntu:20.04
+FROM ubuntu:24.04
 
 RUN apt-get clean 
 RUN apt-get update
-RUN DEBIAN_FRONTEND=noninteractive apt-get install cmake -y -q
 
 RUN apt-get install -y -q \
 	wget \
@@ -12,21 +11,21 @@ RUN apt-get install -y -q \
 	nano \
 	iptables \
 	build-essential \
-	patch
+	patch \
+	cmake
 
-COPY ./openssl.sh ./
 COPY ./nginx.sh ./
 COPY ./index.html /etc/nginx/html/index.html
 COPY ./priv512.key /etc/nginx/ssl/priv512.key
 COPY ./cert512.pem /etc/nginx/ssl/cert512.pem
 COPY ./nginx.conf /etc/nginx/nginx.conf
 ENV HOME /root
-# WORKDIR $HOME
+WORKDIR $HOME
 
 RUN git clone https://github.com/bcrypto/bee2evp.git
-# WORKDIR $HOME/bee2evp/doc
-# RUN bash build.sh
-RUN bash ./openssl.sh 
+WORKDIR $HOME/bee2evp
+RUN BEE2EVP_INSTALL_DIR=/opt/usr/local bash scripts/build.sh -s -b -t openssl-3.3.1
+
 WORKDIR '/'
 RUN bash ./nginx.sh
 
